--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0"
   },
-  "devDependencies": {
+ "devDependencies": {
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
@@ -23,6 +23,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "react-router-dom": "^6.28.0",
     "vite": "^5.1.4"
   }
 }
